Changes to live chat and footer appearance

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </div>
     </div>
 
-    <div class="container-fluid text-justify">
+    <div class="container-fluid text-justify m-auto">
       <div class="row">
         <div class="alert alert-info" role="alert">
           This web application has several important information about covid-19 and provides daily updates about Nigeria and the world. 
