--- a/livechat.html
+++ b/livechat.html
@@ -118,7 +118,12 @@
       </div>
     </div> -->
     <!-- Floating Covid-bot Button ends -->
-    <div class="embed-responsive embed-responsive-1by1">
+    <!-- Desktop Live chat starts -->
+    <div class="embed-responsive embed-responsive-21by9" id="hide-wall">
+      <iframe class="embed-responsive-item" src="https://tawk.to/chat/5e8fc51835bcbb0c9aaf9b8d/default"></iframe> -->
+    </div>
+    <!-- Desktop live chat ends -->
+    <div class="embed-responsive embed-responsive-1by1" id="hide-desktop" style="padding-bottom: 5em;">
       <iframe class="embed-responsive-item" src="https://tawk.to/chat/5e8fc51835bcbb0c9aaf9b8d/default"></iframe> -->
     </div>
 
